--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
